[tool.poetry]
name = "pdistmap"
version = "0.1.1"
description = "This package helps to find the overlap percentage of two probability distributions."
authors = ["Rehan Guha <rehanguha29@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/rehanguha/pdistmap"
keywords = ["probability", "distributions", "statistics"]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology"
]


[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.9.2"
scipy = "^1.14.1"
numpy = "^2.1.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
