[tool.poetry]
name = "pdistmap"
version = "0.4.0"
description = "This package helps to find the overlap percentage of two probability distributions."
authors = ["Rehan Guha <rehanguha29@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/rehanguha/pdistmap"
keywords = ["probability", "distributions", "statistics"]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology"
]


[tool.poetry.dependencies]
python = ">=3.9"
matplotlib = ">=3.9.2"
scipy = ">=1.13.1"
numpy = ">=2.0.2"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
